[SOUP] WebKitDownload cannot overwrite existing file https://bugs.webkit.org/show_bug.cgi?id=136322

Patch by Michael Catanzaro <mcatanzaro@igalia.com> on 2014-09-01
Reviewed by Carlos Garcia Campos.

* Shared/Downloads/soup/DownloadSoup.cpp:
(WebKit::DownloadClient::didReceiveResponse): pass a member variable
to Download::decideDestinationWithSuggestedFilename instead of a
temporary bool, so we can use the result in didFinishLoading.
(WebKit::DownloadClient::didFinishLoading): overwrite the destination
if Download::decideDestinationWithSuggestedFilename determined we
should do so.

Canonical link: https://commits.webkit.org/154224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173154 268f45cc-cd09-0410-ab3c-d52691b4dbfc