Source/WebKit2/Shared/Downloads/soup/DownloadSoup.cpp
@@ -50,6 +50,7 @@ class DownloadClient : public ResourceHandleClient {
 public:
     DownloadClient(Download* download)
         : m_download(download)
+        , m_allowOverwrite(false)
     {
     }
 
@@ -88,8 +89,7 @@ public:
             suggestedFilename = decodeURLEscapeSequences(url.lastPathComponent());
         }
 
-        bool overwrite;
-        m_destinationURI = m_download->decideDestinationWithSuggestedFilename(suggestedFilename, overwrite);
+        m_destinationURI = m_download->decideDestinationWithSuggestedFilename(suggestedFilename, m_allowOverwrite);
         if (m_destinationURI.isEmpty()) {
 #if PLATFORM(GTK)
             GUniquePtr<char> buffer(g_strdup_printf(_("Cannot determine destination URI for download with suggested filename %s"), suggestedFilename.utf8().data()));
@@ -137,7 +137,7 @@ public:
         ASSERT(m_intermediateFile);
         GRefPtr<GFile> destinationFile = adoptGRef(g_file_new_for_uri(m_destinationURI.utf8().data()));
         GUniqueOutPtr<GError> error;
-        if (!g_file_move(m_intermediateFile.get(), destinationFile.get(), G_FILE_COPY_NONE, nullptr, nullptr, nullptr, &error.outPtr())) {
+        if (!g_file_move(m_intermediateFile.get(), destinationFile.get(), m_allowOverwrite ? G_FILE_COPY_OVERWRITE : G_FILE_COPY_NONE, nullptr, nullptr, nullptr, &error.outPtr())) {
             downloadFailed(platformDownloadDestinationError(m_response, error->message));
             return;
         }
@@ -197,6 +197,7 @@ public:
     GRefPtr<GFile> m_intermediateFile;
     ResourceResponse m_delayedResponse;
     GMainLoopSource m_handleResponseLater;
+    bool m_allowOverwrite;
 };
 
 void Download::start()
